# Capstone-2_Players_SnakeGame

./: CMakeLists.txt  README.md
lib/: AssetManager.cpp  AssetManager.h  Text.cpp  Text.h  controller.cpp  controller.h  food.cpp  food.h  game.cpp  game.h  renderer.cpp  renderer.h  snake.cpp  snake.h
src/: main.cpp
